# Ci-CD-Module

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cc  main.cpp
include/: fetcher.h
src/: fetcher.cpp  sender.cpp
